# cnn-pytorch

./: pyproject.toml
models/: _utils.py  alexnet.py  googlenet.py  resnet.py  vgg.py
models/weights/: __init__.py  alexnet_weights.py  googlenet_weights.py  resnet_weights.py  vgg_weights.py
